--- a/package.json
+++ b/package.json
@@ -11,16 +11,13 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-jshint": "^2.0.0",
     "gulp-livereload": "^3.8.1",
+    "gulp-minify-css": "^1.2.3",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.1.1",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "jshint": "^2.9.1"
-  },
-  "dependencies": {
-    "gulp": "^3.9.1",
-    "gulp-sass": "^2.2.0",
-    "gulp-uglify": "^1.5.2"
   }
 }
